# support-ticket-triage-system

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  WARP.md  pyproject.toml
backend/: env  env.example  pyproject.toml
backend/app/: main.py  rules.yml
backend/app/api/routes/: classify.py  kb.py  resolutions.py  suggestions.py  tickets.py
backend/app/core/: config.py  errors.py
backend/app/db/: base.py
backend/app/nlp/: embeddings.py  pipeline.py
backend/app/schemas/: classify.py  ticket.py
backend/app/scripts/: seed_kb.py  seed_resolutions.py  seed_tickets.py
backend/app/services/: priority_rules.py  serialize.py  suggestions.py
backend/tests/: test_phase2_backend.py  test_smoke.py
docs/: README.md  api-contracts.yaml  architecture.md  db-schema.md  nlp-decisions.md  seeding.md
frontend/: env.example  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/composables/: useApi.ts
frontend/pages/: compose.vue  index.vue  test.vue
frontend/pages/tickets/: [id].vue  index.vue
frontend/server/api/: resolutions.get.ts  tickets.get.ts  tickets.post.ts
frontend/server/api/suggestions/: [id].get.ts
frontend/server/api/tickets/: [id].get.ts
