[project]
name = "ai-ticket-triage-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "sqlmodel==0.0.21",
  "psycopg[binary]==3.2.10",
  "python-dotenv==1.0.1",
  "transformers==4.44.2",
  # CPU-only Torch; if install is slow, you can defer and test /health + tickets first
  "torch==2.6.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I"]
